added prettier and formatteed code
