# apps/money-handler/src/index.ts
@@ -1,29 +1,34 @@
 import { makeApp } from "./app";
-import { Sequelize } from 'sequelize';
+import { Sequelize } from "sequelize";
 
 const database = process.env.MYSQL_DATABASE;
 const username = process.env.MYSQL_USER;
 const password = process.env.MYSQL_PASSWORD;
 const host = process.env.MYSQL_HOSTNAME;
-const dialect = 'mysql';
+const dialect = "mysql";
 
 const PORT = process.env.PORT || 5001;
 
-const sequelize = new Sequelize(database ?? 'moneydb', username ?? 'moneyuser', password, {
+const sequelize = new Sequelize(
+  database ?? "moneydb",
+  username ?? "moneyuser",
+  password,
+  {
     host,
-    dialect
-});
+    dialect,
+  },
+);
 
 const runApp = async () => {
-    try {
-        const app = await makeApp(sequelize);
-        app.listen(PORT, () => {
-            console.log(`Money handler app running on port: ${PORT}`);
-        });
-    } catch (error) {
-        console.log('Some error occured! App will not start!!!');
-        console.log(error);
-    }
+  try {
+    const app = await makeApp(sequelize);
+    app.listen(PORT, () => {
+      console.log(`Money handler app running on port: ${PORT}`);
+    });
+  } catch (error) {
+    console.log("Some error occured! App will not start!!!");
+    console.log(error);
+  }
 };
 
 runApp();
